# customer-churn-prediction

./: .gitignore  CLAUDE.md  CORRELACION.md  LEAKEAGE.md  RESUMEN.md  STATUS.md  V4_MENSUAL.md  VERSIONES.md  pyproject.toml
data/: diccionario_churn_data.md  glamour_metadata.md  qry_churn_v2.sql  qry_churn_v3.sql  qry_churn_v4.sql  qry_churn_v5.sql  qry_churn_v6.sql  qry_churn_v6_all.sql
notebooks/: 01_eda.ipynb  02_validacion_v3.ipynb  04_split_temporal.ipynb  08_baselines_v6.ipynb
notebooks/clean/: ablation_temporal_v5.ipynb  modelo_final.ipynb  modelo_final_v5.ipynb  tuning_optuna_v5.ipynb
notebooks/drafts/: 03_baselines.ipynb  05_baselines_v4.ipynb  06_horizonte_v4.ipynb  07_baselines_v5.ipynb  08_baselines_v6.ipynb
scripts/: build_nb06.py  build_nb07.py  build_nb08.py  build_nb_ablation.py  build_nb_final.py  build_nb_modelo_final.py  build_nb_tuning.py
